compiler/snapshots/constant-mismatched-types.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling library/src/foundation... done
Compiling constant-mismatched-types.wipple... done
Error: compilation failed with 1 feedback item(s)

stdout:

Feedback:

`"42"` (compiler/tests/constant-mismatched-types.wipple:4:5-4:9) (conflicting-types):

  `"42"` (compiler/tests/constant-mismatched-types.wipple:4:5-4:9) is a `Number` (compiler/tests/constant-mismatched-types.wipple:3:6-3:12) or a `String` (compiler/tests/constant-mismatched-types.wipple:4:5-4:9), but it can only be one of these.

  `"42"` (compiler/tests/constant-mismatched-types.wipple:4:5-4:9) must be the same type as `Number` (compiler/tests/constant-mismatched-types.wipple:3:6-3:12) and `x :: Number` (compiler/tests/constant-mismatched-types.wipple:1:1-3:12); double-check these.

  -  `"42"` (compiler/tests/constant-mismatched-types.wipple:4:5-4:9) is a String.
