compiler/snapshots/default-constraint.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 1

stderr:
Compiling default-constraint.wipple... done
Error: compilation failed with 3 feedback item(s)

stdout:
Facts:
TypeDefinitionNode `Number` (compiler/tests/default-constraint.wipple:1:1-3:26)
  at compiler/tests/default-constraint.wipple:1:1-3:26
  has definition constraints
  has type Number
  is a definition
TypeDefinitionNode `String` (compiler/tests/default-constraint.wipple:4:1-4:26)
  at compiler/tests/default-constraint.wipple:4:1-4:26
  has definition constraints
  has type String
  is a definition
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:5:20-5:27)
  at compiler/tests/default-constraint.wipple:5:20-5:27
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:5:20-5:27)
TypeDefinitionNode `List` (compiler/tests/default-constraint.wipple:5:1-5:35)
  at compiler/tests/default-constraint.wipple:5:1-5:35
  has definition constraints
  has type List element
  has type parameters
  is a definition
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:6:19-6:26)
  at compiler/tests/default-constraint.wipple:6:19-6:26
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:6:19-6:26)
TypeDefinitionNode `Set` (compiler/tests/default-constraint.wipple:6:1-6:34)
  at compiler/tests/default-constraint.wipple:6:1-6:34
  has definition constraints
  has type Set element
  has type parameters
  is a definition
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:8:11-8:18)
  at compiler/tests/default-constraint.wipple:8:11-8:18
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:8:11-8:18)
TypeParameterNode `collection` (compiler/tests/default-constraint.wipple:8:19-8:29)
  at compiler/tests/default-constraint.wipple:8:19-8:29
  has type collection
  is a type
  resolved to 1 definition(s): `collection` (compiler/tests/default-constraint.wipple:8:19-8:29)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:8:40-8:47)
  at compiler/tests/default-constraint.wipple:8:40-8:47
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:8:11-8:18)
TypeParameterNode `collection` (compiler/tests/default-constraint.wipple:8:51-8:61)
  at compiler/tests/default-constraint.wipple:8:51-8:61
  has type collection
  is a type
  resolved to 1 definition(s): `collection` (compiler/tests/default-constraint.wipple:8:19-8:29)
FunctionTypeNode `element -> collection` (compiler/tests/default-constraint.wipple:8:40-8:61)
  at compiler/tests/default-constraint.wipple:8:40-8:61
  has type element -> collection
  is a type
TraitDefinitionNode `Collect : element collection => trait (element -> collection)` (compiler/tests/default-constraint.wipple:8:1-8:62)
  at compiler/tests/default-constraint.wipple:8:1-8:62
  has definition constraints
  has instances
  has type element -> collection
  has type parameters
  is a definition
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:9:19-9:26)
  at compiler/tests/default-constraint.wipple:9:19-9:26
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:9:19-9:26)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:9:33-9:40)
  at compiler/tests/default-constraint.wipple:9:33-9:40
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:9:19-9:26)
NamedTypeNode `List element` (compiler/tests/default-constraint.wipple:9:28-9:40)
  at compiler/tests/default-constraint.wipple:9:28-9:40
  has type List element
  is a type
  resolved to 1 definition(s): `List` (compiler/tests/default-constraint.wipple:5:1-5:35)
BoundConstraintNode `Collect element (List element)` (compiler/tests/default-constraint.wipple:9:10-9:42)
  at compiler/tests/default-constraint.wipple:9:10-9:42
PlaceholderExpressionNode `_` (compiler/tests/default-constraint.wipple:9:45-9:46)
  at compiler/tests/default-constraint.wipple:9:45-9:46
  has type element -> List element
  is an expression
InstanceDefinitionNode `instance (Collect element (List element))` (compiler/tests/default-constraint.wipple:9:1-9:46)
  at compiler/tests/default-constraint.wipple:9:1-9:46
  has definition constraints
  has type element -> List element
  has type parameters
  is a definition
  resolved to 1 definition(s): `Collect : element collection => trait (element -> collection)` (compiler/tests/default-constraint.wipple:8:1-8:62)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:10:19-10:26)
  at compiler/tests/default-constraint.wipple:10:19-10:26
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:10:19-10:26)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:10:32-10:39)
  at compiler/tests/default-constraint.wipple:10:32-10:39
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:10:19-10:26)
NamedTypeNode `Set element` (compiler/tests/default-constraint.wipple:10:28-10:39)
  at compiler/tests/default-constraint.wipple:10:28-10:39
  has type Set element
  is a type
  resolved to 1 definition(s): `Set` (compiler/tests/default-constraint.wipple:6:1-6:34)
BoundConstraintNode `Collect element (Set element)` (compiler/tests/default-constraint.wipple:10:10-10:41)
  at compiler/tests/default-constraint.wipple:10:10-10:41
PlaceholderExpressionNode `_` (compiler/tests/default-constraint.wipple:10:44-10:45)
  at compiler/tests/default-constraint.wipple:10:44-10:45
  has type element -> Set element
  is an expression
InstanceDefinitionNode `instance (Collect element (Set element))` (compiler/tests/default-constraint.wipple:10:1-10:45)
  at compiler/tests/default-constraint.wipple:10:1-10:45
  has definition constraints
  has type element -> Set element
  has type parameters
  is a definition
  resolved to 1 definition(s): `Collect : element collection => trait (element -> collection)` (compiler/tests/default-constraint.wipple:8:1-8:62)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:13:12-13:19)
  at compiler/tests/default-constraint.wipple:13:12-13:19
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:13:12-13:19)
TypeParameterNode `output` (compiler/tests/default-constraint.wipple:13:23-13:29)
  at compiler/tests/default-constraint.wipple:13:23-13:29
  has type output
  is a type
  resolved to 1 definition(s): `output` (compiler/tests/default-constraint.wipple:13:23-13:29)
FunctionTypeNode `element -> output` (compiler/tests/default-constraint.wipple:13:12-13:29)
  at compiler/tests/default-constraint.wipple:13:12-13:29
  has type element -> output
  is a type
TypeParameterNode `output` (compiler/tests/default-constraint.wipple:13:37-13:43)
  at compiler/tests/default-constraint.wipple:13:37-13:43
  has type output
  is a type
  resolved to 1 definition(s): `output` (compiler/tests/default-constraint.wipple:13:23-13:29)
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:13:52-13:59)
  at compiler/tests/default-constraint.wipple:13:52-13:59
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:13:12-13:19)
NamedTypeNode `List element` (compiler/tests/default-constraint.wipple:13:47-13:59)
  at compiler/tests/default-constraint.wipple:13:47-13:59
  has type List element
  is a type
  resolved to 1 definition(s): `List` (compiler/tests/default-constraint.wipple:5:1-5:35)
DefaultConstraintNode `output :: List element` (compiler/tests/default-constraint.wipple:13:36-13:60)
  at compiler/tests/default-constraint.wipple:13:36-13:60
  is a constraint
TypeParameterNode `element` (compiler/tests/default-constraint.wipple:13:70-13:77)
  at compiler/tests/default-constraint.wipple:13:70-13:77
  has type element
  is a type
  resolved to 1 definition(s): `element` (compiler/tests/default-constraint.wipple:13:12-13:19)
TypeParameterNode `output` (compiler/tests/default-constraint.wipple:13:78-13:84)
  at compiler/tests/default-constraint.wipple:13:78-13:84
  has type output
  is a type
  resolved to 1 definition(s): `output` (compiler/tests/default-constraint.wipple:13:23-13:29)
BoundConstraintNode `Collect element output` (compiler/tests/default-constraint.wipple:13:61-13:85)
  at compiler/tests/default-constraint.wipple:13:61-13:85
  is a constraint
  resolved to 1 definition(s): `Collect : element collection => trait (element -> collection)` (compiler/tests/default-constraint.wipple:8:1-8:62)
ConstantDefinitionNode `collect` (compiler/tests/default-constraint.wipple:12:1-13:85)
  at compiler/tests/default-constraint.wipple:12:1-13:85
  has definition constraints
  has type element -> output
  has type parameters
  is a definition
VariablePatternNode `collect` (compiler/tests/default-constraint.wipple:14:1-14:8)
  at compiler/tests/default-constraint.wipple:14:1-14:8
PlaceholderExpressionNode `_` (compiler/tests/default-constraint.wipple:14:11-14:12)
  at compiler/tests/default-constraint.wipple:14:11-14:12
  has type element -> output
  is an expression
WildcardPatternNode `_` (compiler/tests/default-constraint.wipple:16:1-16:2)
  at compiler/tests/default-constraint.wipple:16:1-16:2
  has type List String
  is a pattern
VariableExpressionNode `collect` (compiler/tests/default-constraint.wipple:16:5-16:12)
  at compiler/tests/default-constraint.wipple:16:5-16:12
  has bound(s) Collect String (List String) (`instance (Collect element (List element))` (compiler/tests/default-constraint.wipple:9:1-9:46))
  has type String -> List String
  is an expression
  resolved to 1 definition(s): `collect` (compiler/tests/default-constraint.wipple:12:1-13:85)
StringExpressionNode `"hi"` (compiler/tests/default-constraint.wipple:16:13-16:17)
  at compiler/tests/default-constraint.wipple:16:13-16:17
  has type String
  is an expression
CallExpressionNode `collect "hi"` (compiler/tests/default-constraint.wipple:16:5-16:17)
  at compiler/tests/default-constraint.wipple:16:5-16:17
  has type List String
  is an expression
WildcardPatternNode `_` (compiler/tests/default-constraint.wipple:17:1-17:2)
  at compiler/tests/default-constraint.wipple:17:1-17:2
  has type Set String
  is a pattern
VariableExpressionNode `collect` (compiler/tests/default-constraint.wipple:17:6-17:13)
  at compiler/tests/default-constraint.wipple:17:6-17:13
  has bound(s) Collect String (Set String) (`instance (Collect element (Set element))` (compiler/tests/default-constraint.wipple:10:1-10:45))
  has type String -> Set String
  is an expression
  resolved to 1 definition(s): `collect` (compiler/tests/default-constraint.wipple:12:1-13:85)
StringExpressionNode `"hi"` (compiler/tests/default-constraint.wipple:17:14-17:18)
  at compiler/tests/default-constraint.wipple:17:14-17:18
  has type String
  is an expression
CallExpressionNode `collect "hi"` (compiler/tests/default-constraint.wipple:17:6-17:18)
  at compiler/tests/default-constraint.wipple:17:6-17:18
  has type Set String
  is an expression
PlaceholderTypeNode `_` (compiler/tests/default-constraint.wipple:17:26-17:27)
  at compiler/tests/default-constraint.wipple:17:26-17:27
  has type String
  is a type
NamedTypeNode `Set _` (compiler/tests/default-constraint.wipple:17:22-17:27)
  at compiler/tests/default-constraint.wipple:17:22-17:27
  has type Set String
  is a type
  resolved to 1 definition(s): `Set` (compiler/tests/default-constraint.wipple:6:1-6:34)
AnnotateExpressionNode `collect "hi" :: Set _` (compiler/tests/default-constraint.wipple:17:6-17:27)
  at compiler/tests/default-constraint.wipple:17:6-17:27
  has type Set String
  is an expression


Feedback:

`_` (compiler/tests/default-constraint.wipple:9:45-9:46) (placeholder):

  Found a placeholder of type `element -> List element` (compiler/tests/default-constraint.wipple:8:40-8:61).

  Add a `element -> List element` (compiler/tests/default-constraint.wipple:8:40-8:61) value here before running your program.

`_` (compiler/tests/default-constraint.wipple:10:44-10:45) (placeholder):

  Found a placeholder of type `element -> Set element` (compiler/tests/default-constraint.wipple:8:40-8:61).

  Add a `element -> Set element` (compiler/tests/default-constraint.wipple:8:40-8:61) value here before running your program.

`_` (compiler/tests/default-constraint.wipple:14:11-14:12) (placeholder):

  Found a placeholder of type `element -> output` (compiler/tests/default-constraint.wipple:13:12-13:29).

  Add a `element -> output` (compiler/tests/default-constraint.wipple:13:12-13:29) value here before running your program.
