compiler/snapshots/default-instance.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling default-instance.wipple... done

stdout:
using default instance
using specific instance: Hello, world!
