compiler/snapshots/default-type-parameter.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling default-type-parameter.wipple... done

stdout:
X
Y
