compiler/snapshots/destructuring.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling destructuring.wipple... done

stdout:
Alice
Bob
Charlie
