compiler/snapshots/dictionary.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling dictionary.wipple... done

stdout:
Basketball has 10 letters
Soccer has 6 letters
Golf has 4 letters
