compiler/snapshots/enumerate.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling enumerate.wipple... done

stdout:
