compiler/snapshots/enumeration.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling enumeration.wipple... done

stdout:
