compiler/snapshots/exhaustiveness-checking.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling exhaustiveness-checking.wipple... done

stdout:
