compiler/snapshots/format.wipple.snap
---
source: compiler/test.rs
expression: output
---
status: 0

stderr:
Compiling library/src/foundation... done
Compiling format.wipple... done

stdout:
Hello, Bob!
